.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/Application_SMS_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>X1218 Application SMS Configuration</label>
    <pluralLabel>Application SMS Configurations</pluralLabel>
</CustomObject>