.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Account_SID__c</fullName>
    <label>Account SID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>