.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <description>The api end point</description>
    <label>API Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>