.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/API_Site_Domain_URL__c.field-meta.xml
<CustomField>
    <fullName>API_Site_Domain_URL__c</fullName>
    <label>API Site Domain URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>