.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <label>Application Name</label>
    <referenceTo>SMS_Provider_Configuration__mdt</referenceTo>
    <relationshipName>Mobile_Messaging_Configs</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>