.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/Authentication_Token__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Token__c</fullName>
    <description>this is either the authentication token Auth Token or the API Token depending on the SMS provider</description>
    <label>Authentication Token</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>