.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/Default_Admin_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Admin_Id__c</fullName>
    <label>Default Admin Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>