.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/Default_Admin_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Admin_Name__c</fullName>
    <label>Default Admin Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>