.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/Default_Greetings_Message__c.field-meta.xml
<CustomField>
    <fullName>Default_Greetings_Message__c</fullName>
    <label>Default Greeting Message</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>