.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/Event_Description_Length__c.field-meta.xml
<CustomField>
    <fullName>Event_Description_Length__c</fullName>
    <label>Event Description Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>