.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/Inbound_Header__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Header__c</fullName>
    <label>Inbound Header</label>
    <length>30</length>
    <type>Text</type>
</CustomField>