.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/Inbound_Token__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Token__c</fullName>
    <description>Token to confirm SMS and Delivery Reports are coming from SMS Provider</description>
    <label>Inbound Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>