.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Profile_ID__c</fullName>
    <description>Link the profile ID of the user with the Application and the SMS provider</description>
    <label>Profile ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>