.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <label>Provider Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Twilio</fullName>
            </value>
            <value>
                <fullName>TextUs</fullName>
            </value>
            <value>
                <fullName>MessageMedia</fullName>
                <default>true</default>
                <label>MessageMedia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>