.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/Sender_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Sender_Phone_Number__c</fullName>
    <label>Sender Phone Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>