.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/fields/SMS_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>SMS_Cost_Center__c</fullName>
    <label>SMS Cost Center</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>