.vscode/allianceuat_compare/force-app/main/default/objects/Application_SMS_Configuration__mdt/listViews/SMS_List.listView-meta.xml
<ListView>
    <fullName>SMS_List</fullName>
    <columns>SMS_Cost_Center__c</columns>
    <columns>Sender_Phone_Number__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>SMS List</label>
    <language>en_US</language>
</ListView>